--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
       <h3>Опыт</h3>
       <p class="editable"></strong>Опыт отсутствует</p>
     </div>
+    <div class="section" style="text-align: center; margin-top: 30px;">
+    <button onclick="downloadPDF()">Скачать PDF</button>
   </div>
+</div>
 
-  <button onclick="downloadPDF()">Скачать PDF</button>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <script>
